--- a/flexbox.html
+++ b/flexbox.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flexbox</title>
+    <style>
+        .container{
+            height: 400px;
+            border: 2px dotted slategray;
+            display: flex;
+            justify-content: center;
+        }
+        .box {
+            width: 200px;
+            height: 200px;
+            border: 2px dashed rebeccapurple;
+            font-size: 3em;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <h1>I am flexible right now</h1>
+    <div class="container">
+        <div class="box">box-1</div>
+        <div class="box">box-2</div>
+        <div class="box">box-3</div>
+    </div>
 </body>
+
 </html>
