--- a/album.html
+++ b/album.html
@@ -17,6 +17,7 @@
             border-radius: 10px;
             position: relative;
             margin: 10px;
+            overflow:hidden;
         }
         .photo img{
             width: 50%;
@@ -39,6 +40,10 @@
         }
         .photo-detail p{
             color: white;
+        }
+        .photo-frame:hover .photo{
+            transform: scale(1.3) rotate(360deg);
+            transition: transform 1s ease-in-out;
         }
     </style>
 </head>
